@@ -1,14 +1,14 @@
-version,codename,series,release,eol
-1.1,Buzz,buzz,1996-06-17,1997-06-05
-1.2,Rex,rex,1996-12-12,1998-06-05
-1.3,Bo,bo,1997-06-05,1999-03-09
-2.0,Hamm,hamm,1998-07-24,2000-03-09
-2.1,Slink,slink,1999-03-09,2000-10-30
-2.2,Potato,potato,2000-08-15,2003-07-30
-3.0,Woody,woody,2002-07-19,2006-06-30
-3.1,Sarge,sarge,2005-06-06,2008-03-30
-4.0,Etch,etch,2007-04-08,2010-02-15
-5.0,Lenny,lenny,2009-02-14,2012-02-06
-6.0,Squeeze,squeeze,2011-02-06
-7.0,Wheezy,wheezy
-,Sid,sid
+version,codename,series,created,release,eol
+1.1,Buzz,buzz,1993-08-16,1996-06-17,1997-06-05
+1.2,Rex,rex,1996-06-17,1996-12-12,1998-06-05
+1.3,Bo,bo,1996-12-12,1997-06-05,1999-03-09
+2.0,Hamm,hamm,1997-06-05,1998-07-24,2000-03-09
+2.1,Slink,slink,1998-07-24,1999-03-09,2000-10-30
+2.2,Potato,potato,1999-03-09,2000-08-15,2003-07-30
+3.0,Woody,woody,2000-08-15,2002-07-19,2006-06-30
+3.1,Sarge,sarge,2002-07-19,2005-06-06,2008-03-30
+4.0,Etch,etch,2005-06-06,2007-04-08,2010-02-15
+5.0,Lenny,lenny,2007-04-08,2009-02-14,2012-02-06
+6.0,Squeeze,squeeze,2009-02-14,2011-02-06
+7.0,Wheezy,wheezy,2011-02-06
+,Sid,sid,1993-08-16
