@@ -1,15 +1,15 @@
-version,codename,series,release,eol,eol-server
-4.10,Warty Warthog,warty,2004-10-20,2006-04-30
-5.04,Hoary Hedgehog,hoary,2005-04-08,2006-10-31
-5.10,Breezy Badger,breezy,2005-10-13,2007-04-13
-6.06 LTS,Dapper Drake,dapper,2006-06-01,2009-07-14,2011-06-01
-6.10,Edgy Eft,edgy,2006-10-26,2008-04-25
-7.04,Feisty Fawn,feisty,2007-04-19,2008-10-19
-7.10,Gutsy Gibbon,gutsy,2007-10-18,2009-04-18
-8.04 LTS,Hardy Heron,hardy,2008-04-24,2011-04,2013-04
-8.10,Intrepid Ibex,intrepid,2008-10-30,2010-04-30
-9.04,Jaunty Jackalope,jaunty,2009-04-23,2010-10-23
-9.10,Karmic Koala,karmic,2009-10-29,2011-04
-10.04 LTS,Lucid Lynx,lucid,2010-04-29,2013-04,2015-04
-10.10,Maverick Meerkat,maverick,2010-10-10,2012-04
-11.04,Natty Narwhal,natty,2011-04-28,2012-10
+version,codename,series,created,release,eol,eol-server
+4.10,Warty Warthog,warty,2004-03-05,2004-10-20,2006-04-30
+5.04,Hoary Hedgehog,hoary,2004-10-20,2005-04-08,2006-10-31
+5.10,Breezy Badger,breezy,2005-04-08,2005-10-13,2007-04-13
+6.06 LTS,Dapper Drake,dapper,2005-10-13,2006-06-01,2009-07-14,2011-06
+6.10,Edgy Eft,edgy,2006-06-01,2006-10-26,2008-04-25
+7.04,Feisty Fawn,feisty,2006-10-26,2007-04-19,2008-10-19
+7.10,Gutsy Gibbon,gutsy,2007-04-19,2007-10-18,2009-04-18
+8.04 LTS,Hardy Heron,hardy,2007-10-18,2008-04-24,2011-04,2013-04
+8.10,Intrepid Ibex,intrepid,2008-04-24,2008-10-30,2010-04-30
+9.04,Jaunty Jackalope,jaunty,2008-10-30,2009-04-23,2010-10-23
+9.10,Karmic Koala,karmic,2009-04-23,2009-10-29,2011-04
+10.04 LTS,Lucid Lynx,lucid,2009-10-29,2010-04-29,2013-04,2015-04
+10.10,Maverick Meerkat,maverick,2010-04-29,2010-10-10,2012-04
+11.04,Natty Narwhal,natty,2010-10-10,2011-04-28,2012-10
