@@ -5,13 +5,14 @@ ubuntu-dev-tools (0.116) UNRELEASED; urgency=low
     - Add .icns and .java to extension whitelist.
     - Add image/vnd.adobe.photoshop to the mime-type whitelist.
   * data/debian.csv: Add wheezy and release date of squeeze.
+  * *distro-info: Add a "created" column to the data.
 
   [ Stefano Rivera ]
   * debian/copyright:
     - Files is space-separated, not comma.
     - Bump Format revision.
 
- -- Benjamin Drung <bdrung@debian.org>  Sun, 06 Feb 2011 15:16:39 +0100
+ -- Benjamin Drung <bdrung@debian.org>  Sun, 06 Feb 2011 16:47:41 +0100
 
 ubuntu-dev-tools (0.115) unstable; urgency=low
 
